--- a/src/ds_trend.ipynb
+++ b/src/ds_trend.ipynb
@@ -359,9 +359,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 139,
    "outputs": [],
-   "source": [],
+   "source": [
+    "dfx[\"PYTHON\"] = dfx.apply(lambda x: \"PYTHON\" in x['スキルリスト'], axis=1)\n",
+    "dfx[\"機械学習\"] = dfx.apply(lambda x: \"機械学習\" in x['スキルリスト'], axis=1)\n",
+    "dfx[\"SQL\"] = dfx.apply(lambda x: \"SQL\" in x['スキルリスト'], axis=1)\n",
+    "dfx[\"R\"] = dfx.apply(lambda x: \"R\" in x['スキルリスト'], axis=1)\n",
+    "dfx[\"データ分析\"] = dfx.apply(lambda x: \"データ分析\" in x['スキルリスト'], axis=1)\n",
+    "dfx[\"AWS\"] = dfx.apply(lambda x: \"AWS\" in x['スキルリスト'], axis=1)\n",
+    "dfx[\"データサイエンス\"] = dfx.apply(lambda x: \"データサイエンス\" in x['スキルリスト'], axis=1)\n",
+    "dfx[\"TABLEAU\"] = dfx.apply(lambda x: \"TABLEAU\" in x['スキルリスト'], axis=1)\n",
+    "dfx[\"GCP\"] = dfx.apply(lambda x: \"GCP\" in x['スキルリスト'], axis=1)\n",
+    "dfx[\"データ処理\"] = dfx.apply(lambda x: \"データ処理\" in x['スキルリスト'], axis=1)\n",
+    "dfx[\"AWS\"] = dfx.apply(lambda x: \"AWS\" in x['スキルリスト'], axis=1)\n",
+    "dfx[\"データサイエンス\"] = dfx.apply(lambda x: \"データサイエンス\" in x['スキルリスト'], axis=1)\n",
+    "dfx[\"TABLEAU\"] = dfx.apply(lambda x: \"TABLEAU\" in x['スキルリスト'], axis=1)\n",
+    "dfx[\"GCP\"] = dfx.apply(lambda x: \"GCP\" in x['スキルリスト'], axis=1)\n",
+    "dfx[\"データ処理\"] = dfx.apply(lambda x: \"データ処理\" in x['スキルリスト'], axis=1)\n",
+    "dfx[\"BIGQUERY\"] = dfx.apply(lambda x: \"BIGQUERY\" in x['スキルリスト'], axis=1)\n",
+    "dfx[\"統計解析\"] = dfx.apply(lambda x: \"統計解析\" in x['スキルリスト'], axis=1)\n",
+    "dfx[\"統計学\"] = dfx.apply(lambda x: \"統計学\" in x['スキルリスト'], axis=1)\n",
+    "dfx[\"自然言語処理\"] = dfx.apply(lambda x: \"自然言語処理\" in x['スキルリスト'], axis=1)\n",
+    "dfx[\"AI\"] = dfx.apply(lambda x: \"自然言語処理\" in x['スキルリスト'], axis=1)\n",
+    "dfx[\"C++\"] = dfx.apply(lambda x: \"C++\" in x['スキルリスト'], axis=1)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "            ID  年齢  性別  都道府県  年収(下限)  年収(上限)        学歴     大学  \\\n0    BU0213849  54  男性  神奈川県     600     750  大学院卒（博士）   九州大学   \n1    BU0525220  60  男性   東京都    1250    1500  大学院卒（修士）  早稲田大学   \n2    BU0307634  48  男性  神奈川県    1250    1500  大学院卒（修士）   中央大学   \n3    BU1105573  63  女性   東京都    1000    1250       大学卒   中央大学   \n4    BU3462327  48  男性   東京都     750    1000  大学院卒（修士）   東京大学   \n..         ...  ..  ..   ...     ...     ...       ...    ...   \n477  BU3649489  30  男性   東京都     500     600       大学卒  早稲田大学   \n478  BU1587643  30  女性   東京都     600     750  大学院卒（修士）   筑波大学   \n479  BU1465665  39  男性   東京都    1000    1250  大学院卒（修士）   京都大学   \n480  BU3826508  30  女性   埼玉県     500     600  大学院卒（修士）   筑波大学   \n481  BU4798572  26  男性   東京都     500     500  大学院卒（修士）   京都大学   \n\n                           学部       卒業  ... データサイエンス  TABLEAU    GCP  データ処理  \\\n0    博士（工学） システム情報科学府情報知能工学専攻  2007年4月  ...    False    False  False  False   \n1                 理工学部 電気工学専攻  1988年3月  ...    False     True  False  False   \n2                     経済学研究科   2005年3月  ...    False    False  False  False   \n3                         物理   1984年3月  ...     True    False  False  False   \n4                   人文社会系研究科       NaN  ...     True    False  False  False   \n..                        ...      ...  ...      ...      ...    ...    ...   \n477               政治経済学部経済学科   2016年3月  ...    False    False  False  False   \n478              システム情報工学研究科   2016年3月  ...    False    False  False  False   \n479                      大学院   2010年3月  ...    False    False  False  False   \n480                       NaN      NaN  ...    False    False  False  False   \n481                   情報学研究科   2021年3月  ...    False    False  False  False   \n\n    BIGQUERY   統計解析    統計学  自然言語処理     AI    C++  \n0      False  False  False    True   True  False  \n1      False  False  False   False  False  False  \n2      False   True  False   False  False  False  \n3      False  False  False   False  False  False  \n4      False  False  False   False  False  False  \n..       ...    ...    ...     ...    ...    ...  \n477    False  False  False   False  False  False  \n478    False  False  False   False  False  False  \n479    False  False  False   False  False  False  \n480    False  False  False   False  False  False  \n481    False  False  False   False  False  False  \n\n[482 rows x 32 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>ID</th>\n      <th>年齢</th>\n      <th>性別</th>\n      <th>都道府県</th>\n      <th>年収(下限)</th>\n      <th>年収(上限)</th>\n      <th>学歴</th>\n      <th>大学</th>\n      <th>学部</th>\n      <th>卒業</th>\n      <th>...</th>\n      <th>データサイエンス</th>\n      <th>TABLEAU</th>\n      <th>GCP</th>\n      <th>データ処理</th>\n      <th>BIGQUERY</th>\n      <th>統計解析</th>\n      <th>統計学</th>\n      <th>自然言語処理</th>\n      <th>AI</th>\n      <th>C++</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>BU0213849</td>\n      <td>54</td>\n      <td>男性</td>\n      <td>神奈川県</td>\n      <td>600</td>\n      <td>750</td>\n      <td>大学院卒（博士）</td>\n      <td>九州大学</td>\n      <td>博士（工学） システム情報科学府情報知能工学専攻</td>\n      <td>2007年4月</td>\n      <td>...</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>True</td>\n      <td>True</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>BU0525220</td>\n      <td>60</td>\n      <td>男性</td>\n      <td>東京都</td>\n      <td>1250</td>\n      <td>1500</td>\n      <td>大学院卒（修士）</td>\n      <td>早稲田大学</td>\n      <td>理工学部 電気工学専攻</td>\n      <td>1988年3月</td>\n      <td>...</td>\n      <td>False</td>\n      <td>True</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>BU0307634</td>\n      <td>48</td>\n      <td>男性</td>\n      <td>神奈川県</td>\n      <td>1250</td>\n      <td>1500</td>\n      <td>大学院卒（修士）</td>\n      <td>中央大学</td>\n      <td>経済学研究科</td>\n      <td>2005年3月</td>\n      <td>...</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>True</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>BU1105573</td>\n      <td>63</td>\n      <td>女性</td>\n      <td>東京都</td>\n      <td>1000</td>\n      <td>1250</td>\n      <td>大学卒</td>\n      <td>中央大学</td>\n      <td>物理</td>\n      <td>1984年3月</td>\n      <td>...</td>\n      <td>True</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>BU3462327</td>\n      <td>48</td>\n      <td>男性</td>\n      <td>東京都</td>\n      <td>750</td>\n      <td>1000</td>\n      <td>大学院卒（修士）</td>\n      <td>東京大学</td>\n      <td>人文社会系研究科</td>\n      <td>NaN</td>\n      <td>...</td>\n      <td>True</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>477</th>\n      <td>BU3649489</td>\n      <td>30</td>\n      <td>男性</td>\n      <td>東京都</td>\n      <td>500</td>\n      <td>600</td>\n      <td>大学卒</td>\n      <td>早稲田大学</td>\n      <td>政治経済学部経済学科</td>\n      <td>2016年3月</td>\n      <td>...</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>478</th>\n      <td>BU1587643</td>\n      <td>30</td>\n      <td>女性</td>\n      <td>東京都</td>\n      <td>600</td>\n      <td>750</td>\n      <td>大学院卒（修士）</td>\n      <td>筑波大学</td>\n      <td>システム情報工学研究科</td>\n      <td>2016年3月</td>\n      <td>...</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>479</th>\n      <td>BU1465665</td>\n      <td>39</td>\n      <td>男性</td>\n      <td>東京都</td>\n      <td>1000</td>\n      <td>1250</td>\n      <td>大学院卒（修士）</td>\n      <td>京都大学</td>\n      <td>大学院</td>\n      <td>2010年3月</td>\n      <td>...</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>480</th>\n      <td>BU3826508</td>\n      <td>30</td>\n      <td>女性</td>\n      <td>埼玉県</td>\n      <td>500</td>\n      <td>600</td>\n      <td>大学院卒（修士）</td>\n      <td>筑波大学</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>...</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>481</th>\n      <td>BU4798572</td>\n      <td>26</td>\n      <td>男性</td>\n      <td>東京都</td>\n      <td>500</td>\n      <td>500</td>\n      <td>大学院卒（修士）</td>\n      <td>京都大学</td>\n      <td>情報学研究科</td>\n      <td>2021年3月</td>\n      <td>...</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n    </tr>\n  </tbody>\n</table>\n<p>482 rows × 32 columns</p>\n</div>"
+     },
+     "execution_count": 140,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfx"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "               年齢       年収(下限)       年収(上限)      DS経験年数\ncount  482.000000   482.000000   482.000000  481.000000\nmean    34.780083   788.692946   995.435685    2.956341\nstd      7.198794   323.959638   474.823435    3.143804\nmin     23.000000   500.000000   500.000000    0.000000\n25%     29.000000   600.000000   750.000000    0.000000\n50%     33.000000   750.000000  1000.000000    2.000000\n75%     39.000000  1000.000000  1250.000000    4.000000\nmax     63.000000  3000.000000  5000.000000   25.000000",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>年齢</th>\n      <th>年収(下限)</th>\n      <th>年収(上限)</th>\n      <th>DS経験年数</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>count</th>\n      <td>482.000000</td>\n      <td>482.000000</td>\n      <td>482.000000</td>\n      <td>481.000000</td>\n    </tr>\n    <tr>\n      <th>mean</th>\n      <td>34.780083</td>\n      <td>788.692946</td>\n      <td>995.435685</td>\n      <td>2.956341</td>\n    </tr>\n    <tr>\n      <th>std</th>\n      <td>7.198794</td>\n      <td>323.959638</td>\n      <td>474.823435</td>\n      <td>3.143804</td>\n    </tr>\n    <tr>\n      <th>min</th>\n      <td>23.000000</td>\n      <td>500.000000</td>\n      <td>500.000000</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>25%</th>\n      <td>29.000000</td>\n      <td>600.000000</td>\n      <td>750.000000</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>50%</th>\n      <td>33.000000</td>\n      <td>750.000000</td>\n      <td>1000.000000</td>\n      <td>2.000000</td>\n    </tr>\n    <tr>\n      <th>75%</th>\n      <td>39.000000</td>\n      <td>1000.000000</td>\n      <td>1250.000000</td>\n      <td>4.000000</td>\n    </tr>\n    <tr>\n      <th>max</th>\n      <td>63.000000</td>\n      <td>3000.000000</td>\n      <td>5000.000000</td>\n      <td>25.000000</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 141,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfx.describe()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "PYTHON  機械学習   SQL    R      データ分析  AWS    データサイエンス  TABLEAU  GCP    データ処理\nFalse   False  False  False  False  False  False     False    False  False    83\n        True   False  False  False  False  False     False    False  False    26\n        False  False  False  True   False  False     False    False  False    18\nTrue    False  False  False  False  False  False     False    False  False    18\n        True   False  False  False  False  False     False    False  False    15\n                                                                              ..\n        False  False  True   False  True   False     True     False  False     1\n                                                     False    True   False     1\n                                                              False  False     1\n                                    False  True      False    False  False     1\n        True   True   True   True   True   False     False    True   False     1\nLength: 132, dtype: int64"
+     },
+     "execution_count": 143,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfx[[\"PYTHON\",\"機械学習\",\"SQL\",\"R\",\"データ分析\",\"AWS\",\"データサイエンス\",\"TABLEAU\",\"GCP\",\"データ処理\"]].value_counts()"
+   ],
    "metadata": {
     "collapsed": false
    }
